hphp/hack/test/package_v2/package_access/cross_package_with_package_syntax_if_disjunction.php.exp
error: Typing[4472] Cannot access an element which belongs to package pkg5 from package pkg3 [1]
-> This is from cross_package_with_package_syntax_if_disjunction.php--pkg5.php [2]
-> cross_package_with_package_syntax_if_disjunction.php--pkg5.php belongs to package pkg5 [3]
-> But cross_package_with_package_syntax_if_disjunction.php--pkg3.php is in package pkg3 [4]
-> And package pkg3 does not include package pkg5 [5]

cross_package_with_package_syntax_if_disjunction.php--pkg3.php:6:7
     1 | <?hh
[4]  2 | <<file: __PackageOverride('pkg3')>>
     3 | function test(): void {
     4 |   if (package pkg4 || package pkg5) {
     5 |       // neither is allowed because disjuction doesn't register package info
[1]  6 |       pkg5_call();
     7 |       pkg4_call();
     8 |   }

cross_package_with_package_syntax_if_disjunction.php--pkg5.php:3:10
     1 | <?hh
[3]  2 | <<file: __PackageOverride('pkg5')>>
[2]  3 | function pkg5_call(): void {}

PACKAGES.toml:13:11
    11 | includes = ["pkg1"]
    12 | 
[5] 13 | [packages.pkg3]
    14 | includes = ["pkg2", "pkg1"]
    15 | 

error: Typing[4472] Cannot access an element which belongs to package pkg4 from package pkg3 [1]
-> This is from cross_package_with_package_syntax_if_disjunction.php--pkg4.php [2]
-> cross_package_with_package_syntax_if_disjunction.php--pkg4.php belongs to package pkg4 [3]
-> But cross_package_with_package_syntax_if_disjunction.php--pkg3.php is in package pkg3 [4]
-> And package pkg3 does not include package pkg4 [5]

cross_package_with_package_syntax_if_disjunction.php--pkg3.php:7:7
     1 | <?hh
[4]  2 | <<file: __PackageOverride('pkg3')>>
     3 | function test(): void {
     4 |   if (package pkg4 || package pkg5) {
     5 |       // neither is allowed because disjuction doesn't register package info
     6 |       pkg5_call();
[1]  7 |       pkg4_call();
     8 |   }
     9 | }

cross_package_with_package_syntax_if_disjunction.php--pkg4.php:3:10
     1 | <?hh
[3]  2 | <<file: __PackageOverride('pkg4')>>
[2]  3 | function pkg4_call(): void {}

PACKAGES.toml:13:11
    11 | includes = ["pkg1"]
    12 | 
[5] 13 | [packages.pkg3]
    14 | includes = ["pkg2", "pkg1"]
    15 | 

2 errors found
